c/api/builtin/network.h

tree_cell *nasl_same_host (lex_ctxt *);
tree_cell *nasl_target_is_ipv6 (lex_ctxt * lexic);
tree_cell *nasl_open_sock_tcp (lex_ctxt *);
tree_cell *nasl_open_sock_udp (lex_ctxt *);
/* private func */
tree_cell *nasl_open_sock_tcp_bufsz (lex_ctxt *, int);
tree_cell *nasl_socket_get_error (lex_ctxt *);
tree_cell *nasl_open_priv_sock_tcp (lex_ctxt *);
tree_cell *nasl_open_priv_sock_udp (lex_ctxt *);
tree_cell *nasl_send (lex_ctxt *);
tree_cell *nasl_socket_negotiate_ssl (lex_ctxt *);
tree_cell *nasl_recv (lex_ctxt *);
tree_cell *nasl_recv_line (lex_ctxt *);
tree_cell *nasl_socket_get_cert (lex_ctxt *);
tree_cell *nasl_socket_get_ssl_session_id (lex_ctxt *);
tree_cell *nasl_socket_get_ssl_version (lex_ctxt *);
tree_cell *nasl_socket_get_ssl_ciphersuite (lex_ctxt *);
tree_cell *nasl_socket_cert_verify (lex_ctxt *);
tree_cell *nasl_close_socket (lex_ctxt *);
tree_cell *nasl_join_multicast_group (lex_ctxt *);
tree_cell *nasl_leave_multicast_group (lex_ctxt *);
tree_cell *nasl_get_source_port (lex_ctxt *);
tree_cell *nasl_get_sock_info (lex_ctxt *lexic);