c/api/nasl.h

typedef struct TC {
    short type;
    short line_nb;
    short ref_count;              /* Cell is freed when count reaches zero */
    int size;
    union {
        char *str_val;
        long int i_val;
        void *ref_val;            /* internal reference */
    } x;
    struct TC *link[4];
} tree_cell;
typedef struct st_nasl_array {
    int max_idx;                  /* max index - 1! */
    struct st_a_nasl_var **num_elt;       /* max_idx elements */
    struct st_n_nasl_var **hash_elt;      /* VAR_NAME_HASH elements */
} nasl_array;
// Lex
typedef struct struct_lex_ctxt {
    struct struct_lex_ctxt *up_ctxt;
    tree_cell *ret_val;           /* return value or exit flag */
    unsigned fct_ctxt:1;          /* This is a function context */
    unsigned break_flag:1;        /* Break from loop */
    unsigned cont_flag:1;         /* Next iteration in loop */
    unsigned always_signed:1;
    struct script_infos *script_infos;
    const char *oid;
    int recv_timeout;
    int line_nb;
    /* Named variables hash set + anonymous variables array */
    nasl_array ctx_vars;
    /* Functions hash table */
    GHashTable *functions;
} lex_ctxt;
struct scan_globals {
  char *network_targets;
  char *network_scan_status;
  GHashTable *files_translation;
  GHashTable *files_size_translation;
  int global_socket;
  char *scan_id;
};
struct script_infos {
  struct scan_globals *globals;
  kb_t key;
  nvti_t *nvti;
  char *oid;
  char *name;
  GHashTable *udp_data;
  struct in6_addr *ip;
  GSList *vhosts;
  int standalone;
  int denial_port;
  int alive;
};