nasl-sys/src/ast.rs

    pub fn nasl_same_host(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_target_is_ipv6(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_open_sock_tcp(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_open_sock_udp(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_open_sock_tcp_bufsz(
        arg1: *mut lex_ctxt,
        arg2: c_int,
    ) -> *mut tree_cell;
    pub fn nasl_socket_get_error(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_open_priv_sock_tcp(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_open_priv_sock_udp(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_send(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_socket_negotiate_ssl(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_recv(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_recv_line(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_socket_get_cert(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_socket_get_ssl_session_id(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_socket_get_ssl_version(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_socket_get_ssl_ciphersuite(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_socket_cert_verify(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_close_socket(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_join_multicast_group(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_leave_multicast_group(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_get_source_port(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_get_sock_info(lexic: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_string(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_rawstring(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_strlen(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_strcat(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_display(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hex(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_hexstr(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ord(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_tolower(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_toupper(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ereg(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_eregmatch(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_ereg_replace(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_egrep(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_match(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_split(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_chomp(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_substr(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_insstr(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_strstr(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_crap(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_int(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_stridx(arg1: *mut lex_ctxt) -> *mut tree_cell;
    pub fn nasl_str_replace(arg1: *mut lex_ctxt) -> *mut tree_cell;

    // NOTE: 补漏
    pub fn nasl_version() -> *const std::os::raw::c_char;
    pub fn add_nasl_inc_dir (include_dir: *const c_char) -> c_int;
    pub fn nasl_clean_inc();
    pub fn parse_script_infos(infos: *mut script_infos) -> *mut nvti_t;
    pub fn exec_nasl_script(infos: *mut script_infos, mode: c_int) -> c_int;

    pub fn gcrypt_init();
    pub fn openvas_SSL_init() -> c_int;

    pub fn init(ip: *mut in6_addr, vhosts: *mut GSList, kb: kb_t) -> *mut script_infos;
    pub fn nvti_category_is_safe(category: c_int);

    pub fn gvm_hosts_new(hosts_str: *const gchar) -> *mut gvm_hosts_t;
    pub fn gvm_hosts_resolve(hosts: *mut gvm_hosts_t);
    pub fn gvm_hosts_next(hosts: *mut gvm_hosts_t) -> *const gvm_host_t;
    pub fn gvm_host_get_addr6(host: *const gvm_host_t, ip6: *mut in6_addr);
}


#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub enum host_type {
    HOST_TYPE_NAME = 0,       /* Hostname eg. foo */
    HOST_TYPE_IPV4,           /* eg. 192.168.1.1 */
    HOST_TYPE_CIDR_BLOCK,     /* eg. 192.168.15.0/24 */
    HOST_TYPE_RANGE_SHORT,    /* eg. 192.168.15.10-20 */
    HOST_TYPE_RANGE_LONG,     /* eg. 192.168.15.10-192.168.18.3 */
    HOST_TYPE_IPV6,           /* eg. ::1 */
    HOST_TYPE_CIDR6_BLOCK,    /* eg. ::ffee/120 */
    HOST_TYPE_RANGE6_LONG,    /* eg. ::1:200:7-::1:205:500 */
    HOST_TYPE_RANGE6_SHORT,   /* eg. ::1-fe10 */
    HOST_TYPE_MAX             /* Boundary checking. */
}

/// @brief The structure for a single host object.
/// 
/// The elements of this structure should never be accessed directly.
/// Only the functions corresponding to this module should be used.
#[repr(C)]
pub struct gvm_host {
    pub unamed_u: gvm_host_u,
    pub type_: host_type,
    pub vhosts: *mut GSList,
}

#[repr(C)]
pub union gvm_host_u {
    pub name: *mut gchar,
    pub addr: in_addr,
    pub addr6: in6_addr,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct gvm_hosts {
    /// Original hosts definition string.
    pub orig_str: gchar,
    /// Hosts objects list.
    pub hosts: *mut GList,
    /// Current host object in iteration.
    pub current: *mut GList,
    /// Number of single host objects in hosts list.
    pub count: c_uint,
    /// Number of duplicate/excluded values.
    pub removed: c_uint,
}

pub type gvm_hosts_t = gvm_hosts;
pub type gvm_host_t  = gvm_host;
